test/expected/declare_hb.out
declare x as short bool
        ^
9: error: "short bool" is illegal for built-in type
